# speech-driven-lessons

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  MONOREPO-SECRET-CHECKS.md  README-COMMIT-CHECKS.md  README.md  SETUP-COMMIT-CHECKS.md  TEST-COMMIT-CHECKS.md  middleware.ts  netlify.toml  package-lock.json  package.json  render.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
backend/: .coverage  .env.example  MIGRATION_SUMMARY.md  app.py  chatServer.py  chatbot.py  context_manager.py  fix_env.ps1  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  s3_context_manager.py  user_files_utils.py
backend/agent/: __init__.py  machine.py  prompts.py  states.py  tutor.py
backend/api/: __init__.py  assistant.py  course.py  course_generation.py  in_class.py  routes.py  tutor_session.py  user.py  webhook.py
backend/course_content_generation/: __init__.py  gemini_course_outline_generator.py  gemini_slide_speech_generator.py
backend/docker/: Dockerfile
backend/events/: __init__.py  course_events.py  event_bus.py  handlers.py
backend/functions/: get_detailed_content.py  slides_navigation.py
backend/llm/: __init__.py  base.py  cerebras.py  factory.py  groq.py  openrouter.py
backend/models/: __init__.py  agent.py  assessment.py  community_course.py  course.py  enums.py  exceptions.py  llm.py  outline.py  search.py  session.py  user_classification.py
backend/orchestration/: __init__.py  config.py  state.py  workflow.py
backend/robyn_routers/: __init__.py  assistant.py  auth.py  community_course.py  course.py  tutor_session.py  user_classification.py  websocket_router.py
backend/routes/: aiTutor_routes.py  course_generation_routes.py  course_info_routes.py  customize_routes.py  delete_course_routes.py  delete_routes.py  upload_routes.py  voice_routes.py
backend/schemas/: __init__.py  course_plan.py
backend/services/: __init__.py  brave_search.py  community_course_service.py  course_service.py  dtos.py  exceptions.py  materials_context.py  outline_generator.py  plan_generator.py  tutor_session_service.py  user_classification_service.py
backend/tests/: conftest.py  test_models.py  test_orchestration.py
backend/utils/: course_manager.py  firebase_admin.py.bak  s3_utils.py  (+5 more)
(+297 files in other folders)
